@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# "$Id: fltk-config.in,v 1.12.2.20 2004/04/11 04:38:53 easysw Exp $"
+# "$Id: fltk-config.in,v 1.12.2.21 2004/06/01 14:49:51 easysw Exp $"
 # 
 # FLTK configuration utility.
 #
@@ -177,7 +177,7 @@ fi
 # Calculate needed libraries
 LDSTATIC="$libdir/libfltk.a $LDLIBS"
 LDLIBS="$libs -lfltk$SHAREDSUFFIX $LDLIBS"
-LIBS="$LIBS $libdir/libfltk.a"
+LIBS="$LIBS $libs $libdir/libfltk.a"
 
 if test x$use_forms = xyes; then
     LDLIBS="-lfltk_forms$SHAREDSUFFIX $LDLIBS"
@@ -266,5 +266,5 @@ if test "$echo_libs" = "yes"; then
 fi
 
 #
-# End of "$Id: fltk-config.in,v 1.12.2.20 2004/04/11 04:38:53 easysw Exp $".
+# End of "$Id: fltk-config.in,v 1.12.2.21 2004/06/01 14:49:51 easysw Exp $".
 #
