@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.5rc2
 
 	- Documentation updates (STR #365)
+	- FLTK now builds with the current release of MinGW (STR
+	  #325, STR #401, STR #402)
 	- FLTK now honors the numlock key state (STR #369)
 	- The Fl_Text_Display widget did not redraw selections
 	  when focus changed (STR #390)
